--- a/pages/dashboards/default.html
+++ b/pages/dashboards/default.html
@@ -55,7 +55,7 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="d-flex flex-column h-100">
-                    <h2 class="font-weight-bolder mb-0" style="font-family:KaiTi">元宇宙对音乐行业的影响</h2>
+                    <h2 class="font-weight-bolder mb-0" style="font-family:adobe-kaiti-std, sans-serif">元宇宙对音乐行业的影响</h2>
                   </div>
                 </div>
               </div>
@@ -132,25 +132,25 @@
             <div class="row">
               <div class="col-lg-3 col-6 text-center">
                 <div class="border-dashed border-1 border-secondary border-radius-md py-3">
-                  <h6 class="text-primary text-gradient mb-0" style="font-family: 'KaiTi'">直接参与玩家</h6>
+                  <h6 class="text-primary text-gradient mb-0" style="font-family: 'adobe-kaiti-std, sans-serif'">直接参与玩家</h6>
                   <h4 class="font-weight-bolder"><span class="small">12,000,000 </span></h4>
                 </div>
               </div>
               <div class="col-lg-3 col-6 text-center">
                 <div class="border-dashed border-1 border-secondary border-radius-md py-3">
-                  <h6 class="text-primary text-gradient mb-0" style="font-family: 'KaiTi'">直播平台观看</h6>
+                  <h6 class="text-primary text-gradient mb-0" style="font-family: 'adobe-kaiti-std, sans-serif'">直播平台观看</h6>
                   <h4 class="font-weight-bolder"><span class="small">3,000,000 </span></h4>
                 </div>
               </div>
               <div class="col-lg-3 col-6 text-center mt-4 mt-lg-0">
                 <div class="border-dashed border-1 border-secondary border-radius-md py-3">
-                  <h6 class="text-primary text-gradient mb-0" style="font-family: 'KaiTi'">歌手Twitter粉丝增长</h6>
+                  <h6 class="text-primary text-gradient mb-0" style="font-family: 'adobe-kaiti-std, sans-serif'">歌手Twitter粉丝增长</h6>
                   <h4 class="font-weight-bolder"><span class="small">62,000 </span></h4>
                 </div>
               </div>
               <div class="col-lg-3 col-6 text-center mt-4 mt-lg-0">
                 <div class="border-dashed border-1 border-secondary border-radius-md py-3">
-                  <h6 class="text-primary text-gradient mb-0" style="font-family: 'KaiTi'">歌手Ins粉丝增长</h6>
+                  <h6 class="text-primary text-gradient mb-0" style="font-family: 'adobe-kaiti-std, sans-serif'">歌手Ins粉丝增长</h6>
                   <h4 class="font-weight-bolder"><span class="small"> 260,000</span></h4>
                 </div>
               </div>
@@ -836,7 +836,7 @@
                 </div>
             
                 <div class="card-body pt-2">
-                  <h5 style="font-family:KaiTi">1.3 主要趋势</h5>
+                  <h5 style="font-family:adobe-kaiti-std, sans-serif">1.3 主要趋势</h5>
                   <p class="text_1">
                     据 ConsumerAcquisition 的调查数据显示，在相同宣传主题下，UGC（用户生成原创内容）广告的营销效果会比其他传统广告形式好 20-50%。与此同时，全球 UGC 营销市场总规模目前已达到 35.8 亿美元。数据表明，与其它广告类型相比，UGC 视频广告的互动量要高出 12 倍，此外还有 66% 的品牌方表示自己已经增加了 UGC 广告的预算。几乎所有品牌（96%）都会利用 Instagram Stories 来接触潜在消费者，此外有 77% 的营销人员也已经为 KOL 营销展开了投入。
 
@@ -1136,25 +1136,25 @@
           <div class="row" style="margin-top: 30px">
             <div class="col-lg-3 col-6 text-center">
               <div class="border-dashed border-1 border-secondary border-radius-md py-3">
-                <h6 class="text-primary text-gradient mb-0" style="font-family: 'KaiTi'">直接参与玩家</h6>
+                <h6 class="text-primary text-gradient mb-0" style="font-family: 'adobe-kaiti-std, sans-serif'">直接参与玩家</h6>
                 <h4 class="font-weight-bolder"><span class="small">12,000,000 </span></h4>
               </div>
             </div>
             <div class="col-lg-3 col-6 text-center">
               <div class="border-dashed border-1 border-secondary border-radius-md py-3">
-                <h6 class="text-primary text-gradient mb-0" style="font-family: 'KaiTi'">直播平台观看</h6>
+                <h6 class="text-primary text-gradient mb-0" style="font-family: 'adobe-kaiti-std, sans-serif'">直播平台观看</h6>
                 <h4 class="font-weight-bolder"><span class="small">3,000,000 </span></h4>
               </div>
             </div>
             <div class="col-lg-3 col-6 text-center mt-4 mt-lg-0">
               <div class="border-dashed border-1 border-secondary border-radius-md py-3">
-                <h6 class="text-primary text-gradient mb-0" style="font-family: 'KaiTi'">歌手Twitter粉丝增长</h6>
+                <h6 class="text-primary text-gradient mb-0" style="font-family: 'adobe-kaiti-std, sans-serif'">歌手Twitter粉丝增长</h6>
                 <h4 class="font-weight-bolder"><span class="small">62,000 </span></h4>
               </div>
             </div>
             <div class="col-lg-3 col-6 text-center mt-4 mt-lg-0">
               <div class="border-dashed border-1 border-secondary border-radius-md py-3">
-                <h6 class="text-primary text-gradient mb-0" style="font-family: 'KaiTi'">歌手Ins粉丝增长</h6>
+                <h6 class="text-primary text-gradient mb-0" style="font-family: 'adobe-kaiti-std, sans-serif'">歌手Ins粉丝增长</h6>
                 <h4 class="font-weight-bolder"><span class="small"> 260,000</span></h4>
               </div>
             </div>
@@ -1167,7 +1167,7 @@
                   <div class="row">
                     <div class="col-8">
                       <div class="numbers">
-                        <p class="text-sm mb-0 text-capitalize font-weight-bold" style="font-family: 'KaiTi'">堡垒之夜苹果端安装增长</p>
+                        <p class="text-sm mb-0 text-capitalize font-weight-bold" style="font-family: 'adobe-kaiti-std, sans-serif'">堡垒之夜苹果端安装增长</p>
                         <h5 class="font-weight-bolder mb-0">
                           6,000,000
                           <span class="text-success text-sm font-weight-bolder">+89%</span>
@@ -1190,7 +1190,7 @@
                   <div class="row">
                     <div class="col-8">
                       <div class="numbers">
-                        <p class="text-sm mb-0 text-capitalize font-weight-bold" style="font-family: 'KaiTi'">堡垒之夜安卓端收入</p>
+                        <p class="text-sm mb-0 text-capitalize font-weight-bold" style="font-family: 'adobe-kaiti-std, sans-serif'">堡垒之夜安卓端收入</p>
                         <h5 class="font-weight-bolder mb-0">
                           $937,000
                         
